# OrthoCCTools

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  README.md  read.me  solver.py  tsconfig.json
data/: PNIC-complete.out  README.md  all-natural-heptads-at-least-four.fasta  all-natural-heptads-at-least-twice.fasta  all-natural-heptads.fasta
src/: CMakeLists.txt  ioutil.h  mcqd.h  options.h  solver.cpp
src/common/: CMakeLists.txt  InteractionMatrix.h  MemoryMappedMatrix.h  ParallelFor.h  PeptideSet.cpp  PeptideSet.h  SpecialMatrices.h  TriangluarIndex.h  config.h.in  experimental_cxx_features.h  logging.cpp  logging.h
src/fastscore/: CMakeLists.txt  Interaction.cpp  Interaction.h  Makefile  Readme.md  ScoringEngine.cpp  ScoringEngine.h  ScoringEngineBCIPA.cpp  ScoringEngineBCIPA.h  ScoringEnginePotapov.cpp  ScoringEnginePotapov.h  ScoringHelper.h  alll.in  explore.py  fast_map_hack.h  fastscore.cpp  fastscoreCC.i  hardcoded_scores.h  io.h  main.cpp  make.sh  mman.c  mman.h  options.h  setup.py  test-fastscoreCC.py  tests.ipynb  wrapper.js
src/fastscore/data/: PNIC.fasta
src/fastscore/tests/: full4096.fasta
src/jsccscore/: README.md  fastscore.js  fastscore.wasm  fastscore.worker.js  index.html  jsccscore.cpp  script.js  serve.json  style.css  ui.js  ui.ts  wrapper.js  wrapper.ts
src/mcqd_para/: BB_ColorRSort.h  BitSet.h  CMakeLists.txt  DegreeSort.h  GreedyColorSort.h  KillTimer.h  MaximumCliqueBase.h  McrBB.h  ParallelMaximumClique.h  README.txt
src/pyccscore/: CMakeLists.txt  pyccscore.cpp
src/scoring/: CIPAHelper.h  CMakeLists.txt  ICIPAHelper.h  PotapovScores.cpp  PotapovScores.h  ScoringEngineBCIPA.cpp  ScoringEngineBCIPA.h  ScoringEngineICIPA.h  ScoringEnginePotapov.cpp  ScoringEnginePotapov.h  ScoringEngineQCIPA.cpp  ScoringEngineQCIPA.h  ScoringHelper.h
src/setbuilder/: CMakeLists.txt  setbuilder.cpp
src/solver/: CMakeLists.txt  common.h  getopt.h  ioutil.h  options.h  output.txt.current  solver.cpp
src/solver/mcqd_para/: BB_GreedyColorSort.h  BitSet.cpp  BitSet.h  CMakeLists.txt  DegreeAndNumberSort.h  SteadyGreedyColorSort.h  Timer.h
src/util/: 01_generate.py  02_plot_score_matrices.py  03_recommend_cutoff.py  bruteforce_cutoff.py  cartesian_product.py  compare_matrices.py  iterative_set_builder.py  matrix_loader.py  plot_interaction_graph_matrices.py  plot_score_matrix.py  recommend_cutoff.py  reconstruct_orthoset.py
tests/: Readme.md  test_basic.py
tools/: PNIC.int  bzipscore-all.py  bzipscore.pl  generator.py  pairs.txt  reconstruct-orthoset.py  sanity-check.py  square_set.py  squared.fasta  transformed.txt
tools/fastscore/: Interaction.cpp  Interaction.h  main.cpp
