cmake_minimum_required(VERSION 3.5)
set(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS true)

PROJECT(DiplomaThesis)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

IF (NOT CMAKE_BUILD_TYPE)
# SET(CMAKE_BUILD_TYPE "Debug")
 SET(CMAKE_BUILD_TYPE "Release")
ENDIF (NOT CMAKE_BUILD_TYPE)

SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG")

IF (WIN32 OR WIN64)
	OPTION(INTERNAL_CREATE_MSVC_RELATIVE_PATH_PROJECTFILES "Create MSVC projectfiles with relative paths" OFF)
	IF (INTERNAL_CREATE_MSVC_RELATIVE_PATH_PROJECTFILES)
		SET(CMAKE_SUPPRESS_REGENERATION  1)
		SET(CMAKE_USE_RELATIVE_PATHS 1)
	ENDIF(INTERNAL_CREATE_MSVC_RELATIVE_PATH_PROJECTFILES)
ENDIF (WIN32 OR WIN64)

if(CMAKE_COMPILER_IS_GNUCXX OR (CMAKE_CXX_COMPILER_ID STREQUAL "Clang"))
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O3")
    set(EXTERNAL_LIBRARIES "stdc++fs")
elseif(MSVC)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++latest")
endif()

INCLUDE_DIRECTORIES(${ADDITIONAL_INCLUDES}/src)
ADD_SUBDIRECTORY(src)